# shooter-game

./: .gitignore  Cargo.toml  README.md  build.rs  devenv.nix  flake.nix  structure.md
.cargo/: config.toml
.github/workflows/: rust.yml
.zed/: debug.json
assets/game_scenes/: map.json
assets/models/: backdrop.glb  cube.glb  sphere.glb  teapot.glb  teapot2.gltf
assets/projects/: map.blend  map.blend1  map.glb  map.json
assets/shaders/: default.frag  default.vert
assets/shaders/default/: default.frag  default.vert
assets/shaders/fullscreen_quad/: fullscreen_quad.frag  fullscreen_quad.vert
assets/shaders/light/: light.vert
assets/shaders/line/: line.frag  line.vert
assets/shaders/outline/: outline.frag  outline.vert
assets/shaders/quad/: quad.frag  quad.geom  quad.vert
assets/shaders/skybox/: skybox.frag  skybox.vert
assets/shaders/solid_color/: solid_color.frag  solid_color.vert
assets/shaders/terrain/: terrain.frag  terrain.vert
assets/shaders/white/: white.frag  white.vert
assets/test_scenes/: teapots.json
common/: Cargo.toml
common/src/: application.rs  colors.rs  context.rs  debug.rs  engine.rs  input.rs  lib.rs  light.rs  line.rs  maths.rs  physics.rs  quad.rs  renderer.rs  run.rs  scene.rs  terrain.rs  transform.rs  world.rs
common/src/camera/: camera.rs  fps_camera.rs  mod.rs  orbital_camera.rs
common/src/colliders/: aabb_collider.rs
common/src/collision/: collidable.rs  mod.rs
common/src/collision/colliders/: aabb.rs  bvh.rs  capsule.rs  collider.rs  cylinder.rs  mod.rs  sphere.rs  triangle.rs
common/src/components/: component.rs
common/src/geometry/: geometry.rs  geometry_vertex.rs  material.rs  mod.rs  model_instance.rs  model_vertex.rs  primitive.rs  primitives.rs
common/src/import/: gltf.rs  image.rs
common/src/maths/: local.rs  mod.rs  ray.rs  transform.rs
common/src/models/: material.rs  mod.rs  model.rs  model_instance.rs  model_vertex.rs
common/src/resources/: handle.rs  mod.rs  resources.rs
common/src/scene/: bvh.rs  graph.rs  mod.rs  quad_tree.rs  scene.rs
common/src/serde/: mod.rs  serialize_with_context.rs  serialized_background.rs  serialized_graph.rs  serialized_model.rs  serialized_model_instance.rs  serialized_primitive.rs  serialized_renderable.rs  serialized_scene.rs  serialized_world.rs
common/src/systems/: debug_renderer.rs  mod.rs  physics.rs  renderer.rs
common/src/texture/: cubemap.rs  mod.rs  texture.rs  texture2d.rs
common/src/ui/: default_name.rs  mod.rs  ui_item.rs
common/src/world/: graph.rs  mod.rs  physics_context.rs  world.rs
editor/: Cargo.toml
editor/src/: editor.rs  main.rs
editor/src/ui/: mod.rs  ui_graph.rs  ui_transform.rs
editor/src/ui/components/: mod.rs  ui_component.rs
game/: Cargo.toml
game/src/: game.rs  main.rs
game/src/controllers/: player.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
shooter-game-macros/: Cargo.toml
src/: app.rs  buffers.rs  camera.rs  colors.rs  context.rs  debug.rs  input.rs  main.rs  maths.rs  model.rs  pipeline.rs  scene.rs  shaders.rs  texture.rs  vertex.rs
src/common/: app.rs  application.rs  camera.rs  colors.rs  context.rs  debug.rs  input.rs  lib.rs  light.rs  line.rs  maths.rs  model.rs  model_instance.rs  quad.rs  renderer.rs  run.rs  scene.rs  terrain.rs  texture.rs  transform.rs  uuid.rs  vertex.rs
src/common/camera/: camera.rs  fps_camera.rs  mod.rs  orbital_camera.rs
src/common/colliders/: aabb_collider.rs  collider.rs  mod.rs
src/common/import/: image.rs
src/common/models/: material.rs  mod.rs  model.rs  model_instance.rs  primitives.rs
src/common/serde/: uuid.rs
src/common/texture/: cubemap.rs  mod.rs  texture.rs  texture2d.rs
src/common/ui/: collapsing_graph.rs  default_name.rs  mod.rs  selectable.rs
src/editor/: editor.rs  main.rs  orbital_camera.rs
src/game/: game.rs  main.rs  player.rs
