[package]
name = "vulkano-teapot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
bytemuck = "1.14.0"
# Pull from master branch as bytemuck is not supported on stable
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = ["swizzle", "bytemuck"] }
# Remove wasm-bindgen feature cause not using web
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "std", "clock"] }
color-eyre = "0.6.2"
fern = { version = "0.6.2", features = ["colored"] }
gltf = "1.4.0"
itertools = "0.12.0"
winit = "0.29"
log = "0.4.20"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
fastrand = "2.0.1"
memoffset = "0.9.0"
palette = { version = "0.7.5", default-features = false, features = ["named", "std"] }
glium = "0.34"
once_cell = "1.19.0"
