[package]
name = "shooter-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[[bin]]
name = "game"
path = "src/game/main.rs"

[dependencies]
# Pull from master branch as bytemuck is not supported on stable
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = ["swizzle", "bytemuck", "serde"] }
# Remove wasm-bindgen feature cause not using web
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "std", "clock"] }
color-eyre = "0.6.2"
fern = { version = "0.6.2", features = ["colored"] }
gltf = "1.4.0"
itertools = "0.14.0"
log = "0.4.20"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
palette = { version = "0.7.5", default-features = false, features = ["named", "std", "serializing"] }
glium = "0.34"
egui_glium = "0.26.3"
winit = "0.29.0"
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_json = "1.0.116"
rfd = "0.14.1"
memoize = "0.5.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
petgraph = { version = "0.6.5", default-features = false, features = ["serde-1", "stable_graph"] }

[dev-dependencies]
fastrand = "2.0.1"
