[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
# Remove wasm-bindgen feature cause not using web
chrono = { version = "0.4.31", default-features = false, features = [
    "alloc",
    "std",
    "clock",
] }
color-eyre = "0.6.2"
fern = { version = "0.7.1", features = ["colored"] }
gltf = "1.4.0"
itertools = "0.14.0"
log = "0.4.20"
image = { version = "0.25.1", default-features = false, features = [
    "png",
    "jpeg",
] }
palette = { version = "0.7.5", default-features = false, features = [
    "named",
    "std",
    "serializing",
] }
glium = "0.36"
egui_glium = "0.33.2"
winit = "0.30.5"
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_json = "1.0.116"
rfd = "0.15.2"
memoize = "0.5.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
petgraph = { version = "0.8.1", default-features = false, features = [
    "serde-1",
    "stable_graph",
] }
proc-macros = { version = "0.1.0", path = "../proc-macros" }
fxhash = "0.2.1"
nalgebra = { version = "0.34.1", features = ["serde", "serde-serialize"] }
egui_ltreeview = "0.6.0"
fastrand = "2.3.0"
