[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
color-eyre = "0.6.2"
palette = { version = "0.7.5", default-features = false, features = [
    "named",
    "std",
    "serializing",
] }
rfd = "0.15.2"
winit = "0.30.5"
log = "0.4.20"
glium = "0.36"
egui_glium = "0.33.2"
serde_json = "1.0.116"
nalgebra = "0.34.1"
