[package]
name = "game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
color-eyre = "0.6.2"
glium = "0.36"
winit = "0.30.5"
nalgebra = "0.34.1"
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0.148"
fxhash = "0.2.1"
petgraph = { version = "0.8.1", default-features = false, features = [
    "serde-1",
    "stable_graph",
] }
palette = { version = "0.7.5", default-features = false, features = [
    "named",
    "std",
    "serializing",
] }